feat: modularizando pet
